--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,44 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+body {
+  font-size: 18px;
+  background-color: #4158D0;
+  background-image: linear-gradient(43deg, #213599 0%, #C850C0 46%, #FFCC70 100%);
+  font-family: 'Montserrat', sans-serif;
+  box-sizing:border-box;
+}
+
+.tech-stack p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.tech-stack{
+  font-size:1.5em;
+  padding-bottom:3em;
+}
+button a {
+  color: rgb(16, 17, 16);
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+button[type="submit"] {
+  margin-top: 16px;
+  padding: 8px 16px;
+  background-color: #ad2ddb;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  width: 10em;
+  height: 3em;
+}
+
+button[type="submit"]:hover {
+  background-color: rgb(239, 181, 177);
+
+}
